fix home container bottom margin to raise on IOS

--- a/style.css
+++ b/style.css
@@ -1007,7 +1007,7 @@ select {
 
   /*------home----------*/
   .home-container {
-    margin-bottom: 40vh;
+    margin-bottom: 60vh;
     padding: 15px;
   }
 
